# cimplex

./: .gitignore  Cargo.toml
benches/: delaunay_tets.rs
examples/: delaunay_tets.rs
src/: constraint.rs  edge.rs  io.rs  iter.rs  lib.rs  mesh0.rs  mesh1.rs  mesh2.rs  mesh3.rs  mesh_0.rs  mesh_1.rs  mesh_2.rs  mesh_3.rs  private.rs  tet.rs  tetrahedralize.rs  tri.rs  vertex.rs
