[package]
name = "cimplex"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idmap = "0.2.19"
nalgebra = "0.24.0"
typenum = "1.12.0"
fnv = "1.0.7"
serde = { package = "serde", version = "1.0.117", optional = true, features = ["derive"] }

[features]
serde_ = ["serde", "idmap/serde"]