[package]
name = "cimplex"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cimplex"
bench = false

[profile.release]
debug = true

[dependencies]
idmap = "0.2.19"
nalgebra = { version = "0.24.0", features = ["alga"] }
alga = "0.9.3"
typenum = "1.12.0"
fnv = "1.0.7"
simplicity = "0.3.0"
float-ord = "0.2.0"
serde = { version = "1.0.117", optional = true, features = ["derive"] }
obj = { version = "0.10.2", optional = true }

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3.0"
rand_distr = "0.4.0"
criterion = "0.3"

[[bench]]
name = "delaunay_tets"
harness = false